# cpp-primer

./: .gitignore  README.md
inc/: sales_data.h  salesdata.cpp  salesdata.h  screen.cpp  screen.h  window_manager.cpp  window_manager.h
src/examples/001Chapter/1-1-simple-program/: CMakeLists.txt  main.cpp
src/examples/001Chapter/1-2-input-output/: CMakeLists.txt  main.cpp
src/examples/001Chapter/1-3-comments/: CMakeLists.txt  main.cpp
src/examples/001Chapter/1-4-1-while/: CMakeLists.txt  main.cpp  while_sum.cpp  while_sum.h
src/examples/001Chapter/1-4-2-for/: CMakeLists.txt  for_sum.cpp  for_sum.h
src/examples/001Chapter/1-4-3-unknown-inputs/: CMakeLists.txt  main.cpp
src/examples/001Chapter/1-4-4-if/: CMakeLists.txt  main.cpp
src/examples/002Chapter/2-5-2-auto/: main.cpp  (+1 more)
src/examples/007Chapter/7-1-3-class-relate-func/: CMakeLists.txt  main.cpp  sales_data_free_functions.cpp  sales_data_free_functions.h
src/examples/007Chapter/7-3-3-class-types/: CMakeLists.txt  main.cpp
src/examples/007Chapter/7-4-1-name-lookup-class-scope/: CMakeLists.txt  main.cpp
test/examples/001Chapter/: 01_example_tests.cpp  CMakeLists.txt
test/examples/002Chapter/: 02_example_tests.cpp  CMakeLists.txt
test/examples/004Chapter/: CMakeLists.txt
test/examples/006Chapter/: 06_example_tests.cpp  CMakeLists.txt
test/examples/007Chapter/: 07_example_tests.cpp  CMakeLists.txt
test/examples/009Chapter/: 09_example_tests.cpp  CMakeLists.txt
test/exercises/001Chapter/: 01_exercise_tests.cpp  CMakeLists.txt
test/exercises/002Chapter/: 02_exercise_tests.cpp  CMakeLists.txt
(+342 files in other folders)
